styles.css
* {
  margin: 0;
  padding: 0;
}

:root {
  --green: #608c09;
  --light-green: #9dfc74;
  --bright-green: #3aca00;
  --grey: #616161;
}

body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  background-color: palegoldenrod;
  overflow: hidden;
}

header {
  width: 100%;
  height: 60px;
  box-sizing: border-box;
  padding: 0 120px;
  top: 0;
  background-color: var(--green);
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

ul {
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 25px;
}

a {
  text-decoration: none;
  color: #d6dbdf;
  cursor: pointer;
}

a:hover {
  text-shadow: 0 0 7px white;
}

header > ul > li:hover {
  transform: translate(0, -2px);
  transition: all 0.1s ease-in-out;
}

header > h1 {
  color: white;
}

#enter-email {
  width: 100%;
  height: 500px;
  padding: 80px 0 30px 0;
  box-sizing: border-box;
  background-color: var(--green);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 50px;
}

#enter-email > div {
  width: 500px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
}

#enter-email > div > h2 {
  color: white;
  font-size: 40px;
  font-weight: bold;
}

#enter-email > div > p {
  color:  #d6dbdf;
  font-size: 20px;
}

#email {
  width: 500px;
  height: 30px;
  box-sizing: border-box;
  align-self: center;
  border: none;
}

#submit {
  height: 45px;
  width: 150px;
  box-sizing: border-box;
  padding: 10px;
  align-self: center;
  font-size: 20px;
  border: none;
  background-color: var(--grey);
  color: white;
  cursor: pointer;
}

#submit:hover {
  transform: scale(1.1);
  transition: 0.25s ease-in-out;
}

.cover-image {
  display: block;
  max-width: 500px;
  height: auto;
  border-radius: 30px;
}

#products {
  width: 100%;
  height: auto;
  padding-top: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 60px;
}

#products > div {
  width: 200px;
  height: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 10px;
}

.plant {
  object-fit: cover;
  width: 200px;
  height: 200px;
  border-radius: 10px;
}

.plant:hover {
  transform: scale(1.1);
  transition: all 0.5s;
}

#products > div > p {
  color: var(--grey);
  font-size: 15px;
}

#quote {
  width: 100%;
  height: 450px;
  background-color: var(--light-green);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 25px;
}

#quote > p {
  width: 60%;
  font-size: 35px;
}

.quote-text {
  text-align: left;
  color:  #273746;
  font-style: italic;
}

.quote-author {
  text-align: right;
  color: var(--grey);
  font-weight: 700;
}

#get-yours {
  width: 70%;
  height: 150px;
  padding: 0 125px;
  box-sizing: border-box;
  margin: 100px auto;
  background-color: var(--grey);
  border-radius: 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#get-yours > div {
  width: 500px;
}

#get-yours > div > h4 {
  font-size: 25px;
  color: white;
}

#get-yours > div > p {
  font-size: 15px;
  color:  #f2f4f4;
}

#get-yours > button {
  width: 150px;
  height: 50px;
  font-size: 25px;
  background-color: transparent;
  color:  #f2f4f4;
  border: 2px solid #f2f4f4;
  cursor: pointer;
}

#get-yours > button:hover {
  color:  black;
  border: 2px solid black;
  text-shadow: 0 0 15px white;
  box-shadow: 0 0 15px white;
}

footer {
  width: 100%;
  height: 50px;
  background-color: var(--green);
  color: #f2f4f4;
  font-size: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (prefers-reduced-motion: no-preference){
  * {
    scroll-behavior: smooth;
  }
  }

